# FotoKilof

./: .gitignore  .pylintrc  0_pyinstaler  0_pyinstaler.bat  0_pyinstaler.sh  0_zip_windows.sh  CHANGES.md  CONTRIBUTING.md  Changelog  Changelog.md  LICENSE  MANIFEST.in  PROGRAM_GUIDE.md  README.md  ToDo  common.py  convert.py  fotokilof.ini  fotokilof.py  fotokilof.spec  ini_read.py  manifest.yml  pypi-dependencies.json  pyproject.toml  requirements.txt  setup.py  setup.py.deprecated
.github/workflows/: flatpak-build.yml  publish_to_pypi.yml  pylint.yml
doc/: Changelog.md
doc/common/: layout.tex
doc/en/: fotokilof.md  fotokilof.tex
doc/pl/: fotokilof.md  fotokilof.tex
flatpak/: 1_prepare_json_deps.sh  2_generate_flatpak.sh
fotokilof/: __init__.py  __main__.py  check_new_version.py  common.py  convert.py  convert_common.py  convert_pillow.py  convert_wand.py  entries.py  fotokilof.py  fotokilof.sh  gui.py  gui_bindings.py  gui_tooltips.py  ini_read.py  ini_save.py  log.py  magick.py  mswindows.py  preview.py  test_modules.py  tooltips.py  version.py
locale/: fotokilof.pot  pl.po
scripts/: 0_pyinstaler.bat  0_pyinstaler.sh  0_pypi_setuptools.sh  0_zip_locale.sh  0_zip_suse.sh  0_zip_ubuntu.sh  0_zip_windows.sh  1_pypi_run.sh  2_pypi_upload.sh  4_generate_pot.sh  Ubuntu-19.10  Windows-10  Windows-8.1  linux.sh  locale  z_make_po2mo.sh
src/: __init__.py  __main__.py  __version.py  common.py  convert.py  convert_wand.py  entries.py  fotokilof.py  fotokilof.sh  gui.py  ini_read.py  log.py  magick.py  mswindows.py  preview.py  version.py
src/locale/: readme  (+2 more)
(+17 files in other folders)
